# sr80_ros2

sr80_description/: CMakeLists.txt  package.xml
sr80_description/urdf/: SR80.urdf
sr80_hardware_interface/: CMakeLists.txt  package.xml  sr80_hardware.xml
sr80_hardware_interface/include/sr80_hardware_interface/: ethercat_controller.hpp  sr80_hardware.hpp  visibility_control.h
sr80_hardware_interface/src/: ethercat_controller.cpp  sr80_hardware.cpp
sr80_moveit_config/: .setup_assistant  CMakeLists.txt
sr80_moveit_config/config/: SR80.ros2_control.xacro  SR80.srdf  SR80.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_servo.rviz  ros2_controllers.yaml  sr80_simulated_config.yaml
sr80_moveit_config/launch/: sr80_servo_example.launch.py
sr80_moveit_control/: CMakeLists.txt  package.xml
